--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "dotenv": "^8.2.0",
     "electron-devtools-installer": "^3.0.0",
     "electron-is-dev": "^1.2.0",
+    "electron-log": "^4.1.1",
     "electron-reload": "^1.5.0",
     "fs": "0.0.1-security",
+    "fuse.js": "^5.2.3",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-fuzzy": "^1.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
@@ -33,8 +36,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2",
-    "uuid": "^7.0.2",
-    "electron-log": "^4.1.1"
+    "uuid": "^7.0.2"
   },
   "scripts": {
     "start": "yarn watch:css & react-scripts start",
