--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notilda2",
+  "name": "notilda",
   "version": "0.1.0",
   "homepage": ".",
   "main": "build/electron/main.js",
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
     "@types/uuid": "^7.0.2",
+    "chokidar": "^3.4.0",
     "dotenv": "^8.2.0",
     "electron-devtools-installer": "^3.0.0",
     "electron-is-dev": "^1.2.0",
