--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/draft-js": "^0.10.40",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.149",
@@ -19,6 +20,7 @@
     "@types/uuid": "^7.0.2",
     "chokidar": "^3.4.0",
     "dotenv": "^8.2.0",
+    "draft-js": "^0.11.5",
     "electron-devtools-installer": "^3.0.0",
     "electron-is-dev": "^1.2.0",
     "electron-log": "^4.1.1",
