--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -7,8 +7,9 @@
     "outDir": "../build",
     "rootDir": "../",
     "noEmitOnError": true,
+    "skipLibCheck": true,
     "typeRoots": [
       "node_modules/@types"
-    ]
+    ],
   }
 }
