--- a/package.json
+++ b/package.json
@@ -4,20 +4,37 @@
   "homepage": ".",
   "main": "build/electron/main.js",
   "private": true,
-  "dependencies": {
+  "peerDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/cheerio": "^0.22.18",
     "@types/draft-js": "^0.10.40",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.149",
-    "@types/node": "^12.12.32",
+    "@types/node": "^14.0.13",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
-    "@types/uuid": "^7.0.2",
+    "@types/request": "^2.48.5",
+    "@types/uuid": "^7.0.2"
+  },
+  "dependencies": {
+    "@types/cheerio": "^0.22.11",
+    "@types/draft-js": "^0.10.41",
+    "@types/electron-devtools-installer": "^2.2.0",
+    "@types/lodash": "^4.14.155",
+    "@types/puppeteer": "^3.0.0",
+    "@types/react": "^16.9.38",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/request": "^2.48.5",
+    "@types/uuid": "^8.0.0",
+    "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
     "chokidar": "^3.4.0",
     "dotenv": "^8.2.0",
     "draft-js": "^0.11.5",
@@ -27,7 +44,9 @@
     "electron-reload": "^1.5.0",
     "fs": "0.0.1-security",
     "fuse.js": "^5.2.3",
+    "html-to-image": "^0.1.1",
     "lodash": "^4.17.15",
+    "puppeteer": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-fuzzy": "^1.0.0",
@@ -38,8 +57,10 @@
     "react-thunk": "^1.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "request": "^2.88.2",
     "typescript": "~3.7.2",
-    "uuid": "^7.0.2"
+    "uuid": "^7.0.2",
+    "webshot": "^0.18.0"
   },
   "scripts": {
     "start": "yarn watch:css & react-scripts start",
