--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "electron-reload": "^1.5.0",
     "fs": "0.0.1-security",
     "fuse.js": "^5.2.3",
-    "html-to-image": "^0.1.1",
     "lodash": "^4.17.15",
     "puppeteer": "^4.0.0",
     "react": "^16.13.1",
@@ -59,8 +58,7 @@
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
     "typescript": "~3.7.2",
-    "uuid": "^7.0.2",
-    "webshot": "^0.18.0"
+    "uuid": "^7.0.2"
   },
   "scripts": {
     "start": "yarn watch:css & react-scripts start",
@@ -105,7 +103,9 @@
     "webpack-cli": "^3.3.11"
   },
   "build": {
+    "asar": true,
     "extends": null,
+    "asarUnpack": "node_modules/puppeteer/.local-chromium/**/*",
     "linux": {
       "target": [
         "AppImage"
