--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/request": "^2.48.5",
     "@types/uuid": "^8.0.0",
+    "ace-builds": "^1.4.11",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "chokidar": "^3.4.0",
@@ -47,6 +48,7 @@
     "lodash": "^4.17.15",
     "puppeteer": "^4.0.0",
     "react": "^16.13.1",
+    "react-ace": "^9.1.1",
     "react-dom": "^16.13.1",
     "react-fuzzy": "^1.0.0",
     "react-redux": "^7.2.0",
