--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "electron-log": "^4.1.1",
     "electron-reload": "^1.5.0",
     "fs": "0.0.1-security",
-    "fuse.js": "^5.2.3",
+    "fuse.js": "^6.4.0",
+    "glob": "^7.1.6",
     "lodash": "^4.17.15",
     "puppeteer": "^4.0.0",
     "react": "^16.13.1",
