--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/lodash": "^4.14.155",
     "@types/puppeteer": "^3.0.0",
+    "@types/puppeteer-core": "^2.0.0",
     "@types/react": "^16.9.38",
+    "@types/react-color": "^3.0.4",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/request": "^2.48.5",
     "@types/uuid": "^8.0.0",
+    "JSONStream": "^1.3.5",
     "ace-builds": "^1.4.11",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
@@ -43,13 +46,14 @@
     "electron-is-dev": "^1.2.0",
     "electron-log": "^4.1.1",
     "electron-reload": "^1.5.0",
+    "event-stream": "^4.0.1",
     "fs": "0.0.1-security",
     "fuse.js": "^6.4.0",
     "glob": "^7.1.6",
     "lodash": "^4.17.15",
-    "puppeteer": "^4.0.0",
     "react": "^16.13.1",
     "react-ace": "^9.1.1",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-fuzzy": "^1.0.0",
     "react-redux": "^7.2.0",
@@ -60,8 +64,10 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
+    "stream-json": "^1.5.0",
     "typescript": "~3.7.2",
-    "uuid": "^7.0.2"
+    "uuid": "^7.0.2",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "yarn watch & react-scripts start",
@@ -69,15 +75,15 @@
     "postinstall": "electron-builder install-app-deps",
     "r:dev": "BROWSER=none yarn start",
     "e:dev": "concurrently \"BROWSER=none yarn start\" \"tsc -p electron -w\" \"wait-on http://localhost:3000 && tsc -p electron &&  electron .\"",
-    "e:build": "yarn build && tsc -p electron && electron-builder --linux --windows",
+    "e:build": "yarn prod && yarn build && tsc -p electron && electron-builder --linux --windows",
     "build:css": "postcss src/assets/index.css -o src/assets/tailwind.css",
     "watch:css": "postcss src/assets/index.css -o src/assets/tailwind.css",
     "dev": "npm run development",
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "npm run development -- --watch",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "prod": "npm run production",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
