--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "notilda",
   "version": "0.1.0",
   "homepage": ".",
+  "description": "Electron base Bloc Editor For Managing Contetnts",
   "main": "build/electron/main.js",
+  "category": "Office",
+  "author": "Hosein Mola <aeonthread@gmail.com>",
   "private": true,
   "peerDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -35,6 +38,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/request": "^2.48.5",
     "@types/uuid": "^8.0.0",
+    "electron-devtools-installer": "^3.0.0",
     "JSONStream": "^1.3.5",
     "ace-builds": "^1.4.11",
     "axios": "^0.19.2",
@@ -42,20 +46,17 @@
     "chokidar": "^3.4.0",
     "dotenv": "^8.2.0",
     "draft-js": "^0.11.5",
-    "electron-devtools-installer": "^3.0.0",
     "electron-is-dev": "^1.2.0",
     "electron-log": "^4.1.1",
     "electron-reload": "^1.5.0",
     "event-stream": "^4.0.1",
     "fs": "0.0.1-security",
     "fuse.js": "^6.4.0",
-    "glob": "^7.1.6",
-    "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-ace": "^9.1.1",
-    "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-fuzzy": "^1.0.0",
+    "react-player": "^2.5.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
@@ -66,8 +67,7 @@
     "request": "^2.88.2",
     "stream-json": "^1.5.0",
     "typescript": "~3.7.2",
-    "uuid": "^7.0.2",
-    "zlib": "^1.0.5"
+    "uuid": "^7.0.2"
   },
   "scripts": {
     "start": "yarn watch & react-scripts start",
@@ -75,7 +75,7 @@
     "postinstall": "electron-builder install-app-deps",
     "r:dev": "BROWSER=none yarn start",
     "e:dev": "concurrently \"BROWSER=none yarn start\" \"tsc -p electron -w\" \"wait-on http://localhost:3000 && tsc -p electron &&  electron .\"",
-    "e:build": "yarn prod && yarn build && tsc -p electron && electron-builder --linux --windows",
+    "e:build": "yarn prod && yarn build && tsc -p electron && electron-builder --linux",
     "build:css": "postcss src/assets/index.css -o src/assets/tailwind.css",
     "watch:css": "postcss src/assets/index.css -o src/assets/tailwind.css",
     "dev": "npm run development",
@@ -83,6 +83,8 @@
     "watch": "npm run development -- --watch",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "pl": "electron-packager . notilda --ignore=\\.git\\(ignore\\|modules\\) --overwrite --platform=linux --arch=x64 --icon=build/icons/icon.png --prune=true --out=release-builds",
+    "deb64": "electron-installer-debian --icon=./public/icons/icon.png --src ./dist/linux-unpacked/ --dest dist/compressed-deb/ --arch amd64",
     "prod": "npm run production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -103,6 +105,7 @@
     ]
   },
   "devDependencies": {
+    "electron-packager": "^15.0.0",
     "autoprefixer": "^9.7.5",
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.2",
@@ -119,19 +122,22 @@
     "webpack-cli": "^3.3.11"
   },
   "build": {
-    "asar": true,
+    "asar": false,
     "extends": null,
     "asarUnpack": "node_modules/puppeteer/.local-chromium/**/*",
     "linux": {
+      "icon": "../icons/icon.png",
       "target": [
-        "AppImage"
+        "deb"
       ]
     },
     "win": {
+      "icon": "../icons/icon.png",
       "target": "nsis"
     },
     "files": [
-      "build/**/*"
+      "build/**/*",
+      "assets/**/*"
     ],
     "directories": {
       "buildResources": "assets"
