--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/request": "^2.48.5",
     "@types/uuid": "^8.0.0",
-    "electron-devtools-installer": "^3.0.0",
     "JSONStream": "^1.3.5",
     "ace-builds": "^1.4.11",
     "axios": "^0.19.2",
@@ -46,6 +45,7 @@
     "chokidar": "^3.4.0",
     "dotenv": "^8.2.0",
     "draft-js": "^0.11.5",
+    "electron-devtools-installer": "^3.0.0",
     "electron-is-dev": "^1.2.0",
     "electron-log": "^4.1.1",
     "electron-reload": "^1.5.0",
@@ -78,6 +78,7 @@
     "e:build": "yarn prod && yarn build && tsc -p electron && electron-builder --linux",
     "build:css": "postcss src/assets/index.css -o src/assets/tailwind.css",
     "watch:css": "postcss src/assets/index.css -o src/assets/tailwind.css",
+    "postbuild": "purgecss --css build/static/css/*.css --content build/index.html build/static/js/*.js --output build/static/css",
     "dev": "npm run development",
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "npm run development -- --watch",
@@ -105,14 +106,15 @@
     ]
   },
   "devDependencies": {
-    "electron-packager": "^15.0.0",
     "autoprefixer": "^9.7.5",
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.2",
     "electron": "^8.2.3",
     "electron-builder": "^22.5.1",
+    "electron-packager": "^15.0.0",
     "electron-reloader": "^1.0.1",
     "laravel-mix": "^5.0.4",
+    "laravel-mix-purgecss": "^5.0.0",
     "postcss-cli": "^7.1.0",
     "sass": "^1.26.3",
     "tailwindcss": "^1.2.0",
