--- a/package.json
+++ b/package.json
@@ -72,21 +72,16 @@
   "scripts": {
     "start": "yarn watch & react-scripts start",
     "build": "react-scripts build",
-    "postinstall": "electron-builder install-app-deps",
-    "r:dev": "BROWSER=none yarn start",
-    "e:dev": "concurrently \"BROWSER=none yarn start\" \"tsc -p electron -w\" \"wait-on http://localhost:3000 && tsc -p electron &&  electron .\"",
-    "e:build": "yarn prod && yarn build && tsc -p electron && electron-builder --windows",
-    "build:css": "postcss src/assets/index.css -o src/assets/tailwind.css",
-    "watch:css": "postcss src/assets/index.css -o src/assets/tailwind.css",
-    "postbuild": "purgecss --css build/static/css/*.css --content build/index.html build/static/js/*.js --output build/static/css",
-    "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "npm run development -- --watch",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "pl": "electron-packager . notilda --ignore=\\.git\\(ignore\\|modules\\) --overwrite --platform=linux --arch=x64 --icon=build/icons/icon.png --prune=true --out=release-builds",
-    "deb64": "electron-installer-debian --icon=./public/icons/icon.png --src ./dist/linux-unpacked/ --dest dist/compressed-deb/ --arch amd64",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "dev": "npm run development",
     "prod": "npm run production",
+    "postinstall": "electron-builder install-app-deps",
+    "r:dev": "BROWSER=none yarn start",
+    "app:dev": "concurrently \"yarn dev\" \"yarn build\" \"BROWSER=none yarn start\" \"tsc -p electron -w\" \"wait-on http://localhost:3000 && tsc -p electron &&  electron .\"",
+    "app:build": "yarn dev && yarn build && tsc -p electron && electron-builder --windows",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -131,9 +126,9 @@
       "icon": "../icons/icon.png",
       "executableName": "Bloc Editor",
       "target": [
+        "deb",
         "AppImage",
         "snap",
-        "deb",
         "rpm",
         "freebsd"
       ]
