--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "postinstall": "electron-builder install-app-deps",
     "r:dev": "BROWSER=none yarn start",
     "app:dev": "concurrently \"yarn dev\" \"yarn build\" \"BROWSER=none yarn start\" \"tsc -p electron -w\" \"wait-on http://localhost:3000 && tsc -p electron &&  electron .\"",
-    "app:build": "yarn dev && yarn build && tsc -p electron && electron-builder  --linux",
+    "app:build": "yarn dev && yarn build && tsc -p electron && electron-builder  --linux --windows",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -126,7 +126,10 @@
       "icon": "../icons/icon.png",
       "executableName": "Bloc Editor",
       "target": [
-        "deb"
+        "deb",
+        "snap",
+        "AppImage",
+        "rpm"
       ]
     },
     "win": {
